@@ -25,6 +25,7 @@ avoided_gnulib_modules='
 gnulib_modules='
 announce-gen
 argmatch
+assert-h
 attribute
 binary-io
 c-ctype
