@@ -1,0 +1,16 @@
+#!/bin/sh
+# Test ignoring tab expansion.
+
+. "${srcdir=.}/init.sh"; path_prepend_ ../src
+
+fail=0
+
+for p in '\b' '\r' '\t ' '\n'; do
+  printf "$p"'\b\tx\n' >a || framework_failure_
+  printf "$p"'\b        x\n' >b || framework_failure
+
+  diff -E a b >out || fail=1
+  compare /dev/null out || fail=1
+done
+
+Exit $fail
